[package]
name = "kvs"
version = "0.1.0"
authors = ["Samir Hafez <samir.hafez@fundingcircle.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
structopt = "0.3"
failure = "*"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"